swen430as1/tests/invalid/foreach/ForEach_Invalid_03.while
int f(int[] items) {
    int x = 0;
    for(int item : items) {
	x = x + item;
    }
    return item;
}
